src/gramatica/registro_tabla/registro_tabla.jj
options {
//LOOKAHEAD=1;
STATIC = false;
IGNORE_CASE=true;
} 

PARSER_BEGIN(registro_tabla)
package gramatica.registro_tabla;
import ArbolAST.Nodo;
import javax.swing.JOptionPane;


public class registro_tabla{
public static Nodo root=null;

 public Nodo retornarArbol(){
 	return root;
 }
 public static void main(String args[]) throws ParseException 
 	{ 
		try{
			registro_tabla miParser = new registro_tabla(System.in); 
		    root = miParser .Inicio();
		    JOptionPane.showMessageDialog(null, "Parseo Correcto", "COMPI2", 1);
		}catch(ParseException e){
			System.out.println("Error al parsear, "+e.getMessage());
			JOptionPane.showMessageDialog(null, "Parseo INCORRECTO", "COMPI2", 0);
		}
		
 	} 
} 
PARSER_END(registro_tabla)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

/*Palabras Reservadas*/
TOKEN:
{
 <Procedure: "<Procedure>">
|<C_Proc: "</Procedure>">
|<Obj: "<Object>">
|<C_Obj: "</Object>">
|<Tabla: "<Tabla>">
|<C_Tabla: "</Tabla>">
|<Rows: "<rows>">
|<C_Rows: "</rows>">
|<INT: "<integer>">
|<BOOL: "<bool>">
|<TEXT: "<text>">
|<C_INT: "</integer>">
|<C_BOOL: "</bool>">
|<C_TEXT: "</text>">//falta date datetime
|<NOMBRE: "<nombre>">
|<C_NOMBRE: "</nombre>">
|<PATH: "<path>">
|<C_PATH: "</path>">

}

/*EXPRESIONES REGULARES*/
TOKEN :
{
  < NUM: <DECIMAL_LITERAL >>
| < #DECIMAL_LITERAL: ["0"-"9"] (["0"-"9"])*(["."](["0"-"9"])*)? >
| < IDEN: ["a"-"z","A"-"Z","_"] ( ["a"-"z","A"-"Z","0"-"9","_"] )* >
| < CADENA: "C" ":" (~["\"","\n","\t","<",">"])+ >
}


Nodo Inicio():
{Nodo raiz,sent;}
{ 
   {raiz= new Nodo("registro_tabla",0,0);}
   (r=Tabla()  {raiz.hijos.addLast(r);})+
   <EOF>
   {return raiz;}
  
}



Nodo Tabla():
{Nodo raiz,r,rows;Token b;}
{
 {rows= new Nodo("filas",0,0);}
 	<Rows>
 	  (r=Atributo(){rows.hijos.addLast(r);})+
 	<C_Rows>

 {return rows;}
}


Nodo Atributo():
{Nodo raiz;Token a,b;}
{
  a=<INT>b=<IDEN><C_INT>  	{return new Nodo("ATRIBUTO",a.beginLine,a.beginColumn,a.image,b.image);}
 |a=<BOOL>b=<IDEN><C_BOOL>	{return new Nodo("ATRIBUTO",a.beginLine,a.beginColumn,a.image,b.image);}
 |a=<TEXT>b=<IDEN><C_TEXT>	{return new Nodo("ATRIBUTO",a.beginLine,a.beginColumn,a.image,b.image);}
 
 //falta date datetime
}
